--- a/public/signin-callback.html
+++ b/public/signin-callback.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<title>Authentification callback processing..</title>
+	</head>
 
-<head>
-    <title>Authentification callback processing..</title>
-</head>
+	<body>
+		<noscript> You need to enable JavaScript to run this app. </noscript>
 
-<body>
-    <noscript>
-        You need to enable JavaScript to run this app.
-    </noscript>
+		<h1>Authentification callback processing...</h1>
 
-    <h1>Authentification callback processing...</h1>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/oidc-client/1.10.1/oidc-client.js"></script>
-    <script>
-        new Oidc.UserManager({ response_mode: "query" }).signinRedirectCallback().then(function () {
-            window.location = "/";
-        }).catch(function (e) {
-            console.error(e);
-        });
-    </script>
-
-</body>
-
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/oidc-client/1.10.1/oidc-client.js"></script>
+		<script>
+			new Oidc.UserManager({ response_mode: 'query' })
+				.signinRedirectCallback()
+				.then(function () {
+					window.location = '/'
+				})
+				.catch(function (e) {
+					console.error(e)
+				})
+		</script>
+	</body>
 </html>
